# pvrg-jpeg

./: CMakeLists.txt  README  README.md  build.bat  build.sh  codec.c  globals.h  huffman.c  io.c  jpeg  jpeg.1  jpeg.c  lexer.c  lexer.l  makefile  maker.sh  marker.c  marker.h  param.h  patches.sh  prototypes.h  pvrg-jpeg  stream.c  stream.h  system.h  transform.c
debian/: README.Debian  changelog  control  copyright  rules  watch
debian/patches/: cmakelists.txt.patch  implicitdecl.patch  jpeg.1.patch  jpegge.patch  lexer.l.patch  marker_o_rdwr.patch  mayhem.patch  pvrg-jpeg-etb.patch  series
